--- a/main.css
+++ b/main.css
@@ -7,48 +7,112 @@ body {
     padding: 0;
 }
 
-table{
+#existedGames {
     border-spacing: 0;
 }
 
-td{
+#existedGames td {
     border-bottom: 1px solid #000;
     padding: 6px;
 }
 
-tr{
+#existedGames tr {
     transition: all 0.2s;
 }
 
-.oddtr{
+.oddtr {
     background-color: lightblue;
-    color:"#083F7B";
+    color: "#083F7B";
 }
 
-.oddtr:hover{
+.oddtr:hover {
     background-color: hsl(195, 53%, 70%);
 }
 
-.eventr:hover{
+.eventr:hover {
     background-color: hsl(0, 0%, 70%);
 }
 
-.eventr{
+.eventr {
     background-color: lightgray;
-    color:black;
+    color: black;
 }
 
 #item {
     background-color: rgba(173, 216, 230, 0.9);
     border-radius: 2px;
     border-style: dashed;
-    width: 55vw;
+    width: 30vw;
     height: 300px;
     display: inline-block;
     position: fixed;
     bottom: 5vw;
-    left: 5vw;
+    left: 2vw;
 
+}
+
+#chat{
+    background-color: rgba(173, 216, 230, 0.9);
+    border-radius: 2px;
+    border-style: dashed;
+    width: 30vw;
+    height: 300px;
+    display: inline-block;
+    position: fixed;
+    bottom: 5vw;
+    left: 35vw;
+}
+
+#chat input{
+    height: 30px;
+    display: inline-block;
+    width: 100%;
+}
+
+#chat button{
+    height: 30px;
+    display: inline-block;
+}
+
+#chatInput{
+    height: 30px;
+    display: block;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+#chatContentDiv{
+    text-align: left;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 270px;
+}
+
+.chatContent{
+    margin: 2px;
+    width: 90%;
+}
+
+#chatContentDiv::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+}
+
+#chatContentDiv::-webkit-scrollbar {
+    width: 4px;
+    background-color: #F5F5F5;
+}
+
+#chatContentDiv::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+    background-image: -webkit-gradient(linear, left bottom, left top, from(#5ee7df), to(#b490ca));
+    background-image: -webkit-linear-gradient(bottom, #5ee7df 0%, #b490ca 100%);
+    background-image: linear-gradient(to top, #5ee7df 0%, #b490ca 100%);
+}
+
+#chatContentDiv {
+    scrollbar-color: #b490ca #F5F5F5;
 }
 
 #gameinfo {
@@ -61,7 +125,7 @@ tr{
     line-height: 40px;
     position: fixed;
     bottom: 5vw;
-    right: 5vw;
+    right: 2vw;
 }
 
 #gameinfo p {
@@ -83,6 +147,8 @@ tr{
     width: 30px;
     border: 2px solid black;
     transition: all 0.2s;
+    color: orange;
+    text-shadow: 0px 0px 4px orange;
 }
 
 .canRemove {
@@ -94,7 +160,8 @@ tr{
     height: 30px;
     width: 30px;
     border: 2px solid black;
-
+    color: orange;
+    text-shadow: 0px 0px 4px orange;
 }
 
 .ships {
