--- a/main.css
+++ b/main.css
@@ -61,12 +61,15 @@ body {
     position: fixed;
     bottom: 5vw;
     left: 35vw;
+    text-align: left;
 }
 
 #chat input{
     height: 30px;
     display: inline-block;
     width: 100%;
+    position: absolute;
+    left: 48px;
 }
 
 #chat button{
@@ -113,6 +116,56 @@ body {
 
 #chatContentDiv {
     scrollbar-color: #b490ca #F5F5F5;
+}
+
+#showEmojiBnt{
+    position: absolute;
+    bottom: 0;
+    left: 2px;
+    height: 30px;
+    width: 44px;
+}
+#sendMsgBnt{
+    position: absolute;
+    bottom: 0;
+    right: 2px;
+    height: 30px;
+    width: 44px;
+}
+#emoji{
+    height: 300px;
+    width: 248px;
+    overflow-y: scroll;
+    text-align: left;
+    position: absolute;
+    bottom: 36px;
+    right: 6px;
+    background-color: #F5F5F5;
+    opacity: 0.8;
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 2px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3); 
+}
+
+#emoji img{
+    width: 32px;
+    height: 32px;
+    margin: 2px;
+    transition: all 0.1s;
+}
+
+#emoji img:hover{
+    cursor: pointer;
+    background-color: rgba(0, 0, 0,0.1);
+}
+
+.chatEmoji{
+    width: 24px;
+    height: 24px;
+    margin: 2px;
+    position: relative;
+    top: 4px
 }
 
 #gameinfo {
